Worked on navbar, added fonts and sizes

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
 
 
 
+@font-face {
+    font-family: 'Oregano';
+    src: local('Oregano'), url(./Fonts/Oregano-Regular.ttf) format('opentype');
+  }
